// sections, and add a link to the new section in the list of releases at the
// top of the page. Note that release subheads must be floated and sections
// cannot be empty.
// TEMPLATE:

// == {es} version n.n.n

//=== Breaking Changes

//=== Deprecations

//=== New Features

//=== Enhancements

//=== Bug Fixes

//=== Regressions

== {es} version 7.3.0

=== Bug Fixes

* Reduce false positives associated with the multi-bucket feature. (See {ml-pull}491[#491].)
* Reduce false positives for sum and count functions on sparse data. (See {ml-pull}492[#492].)

== {es} version 7.2.1

=== Bug Fixes

* Fix an edge case causing spurious anomalies (false positives) if the variance in the count of events
changed significantly throughout the period of a seasonal quantity. (See {ml-pull}489[#489].)

== {es} version 7.2.0

=== Enhancements

* Remove hard limit for maximum forecast interval and limit based on the time interval of data added
to the model. (See {ml-pull}214[#214].)

* Use hardened compiler options to build 3rd party libraries. (See {ml-pull}453[#453].)

* Only select more complex trend models for forecasting if there is evidence that they are needed.
(See {ml-pull}463[#463].)

* Improve residual model selection. (See {ml-pull}468[#468].)

* Stop linking to libcrypt on Linux. (See {ml-pull}480[#480].)

* Improvements to hard_limit audit message. (See {ml-pull}486[#486].)

=== Bug Fixes

* Handle NaNs when detrending seasonal components. {ml-pull}408[#408]

== {es} version 7.0.0-alpha2

=== Bug Fixes

* Fixes CPoissonMeanConjugate sampling error. {ml-pull}335[#335]
//NOTE: Remove from final 7.0.0 release notes if already in 6.x

* Ensure statics are persisted in a consistent manner {ml-pull}360[#360]

== {es} version 7.0.0-alpha1

== {es} version 6.7.2

=== Enhancements

* Adjust seccomp filter to allow the "time" system call {ml-pull}459[#459]

== {es} version 6.7.0

=== Bug Fixes

* Improve autodetect logic for persistence. {ml-pull}437[#437]

== {es} version 6.6.2
