@@ -1,2 +1,2 @@
 name,version,revision,url,license,copyright
-Apache Portable Runtime Library,1.5.2,,https://apr.apache.org,Apache-2.0,Copyright (c) 2000-2015 The Apache Software Foundation
+Apache Portable Runtime Library,1.7.0,,https://apr.apache.org,Apache-2.0,Copyright (c) 2000-2019 The Apache Software Foundation
