@@ -1,7 +1,7 @@
 Apache Portable Runtime Utility Library
-Copyright (c) 2009 The Apache Software Foundation.
+Copyright (c) 2000-2016 The Apache Software Foundation.
 
-This product includes software developed by
+This product includes software developed at
 The Apache Software Foundation (http://www.apache.org/).
 
 Portions of this software were developed at the National Center
